# Brecs

./: .gitignore  AUTHORS  CMakeLists.txt  COPYING  LICENSE  NOTES.ngc  README.md  build.ps1  build_init.ps1  compilejar.sh  configure.ac  gitignore.old
ISBI_LS1/: 00001.tif  00002.tif  00003.tif  00004.tif  00005.tif  00006.tif  00007.tif  00008.tif  00009.tif  00010.tif  00011.tif  00012.tif  00013.tif  00014.tif  00015.tif  00016.tif  00017.tif  00018.tif  00019.tif  00020.tif  00021.tif  00022.tif  00023.tif  00024.tif  00025.tif  00026.tif  00027.tif  00028.tif  00029.tif  00030.tif  00031.tif  00032.tif  00033.tif  00034.tif  00035.tif  00036.tif  00037.tif  00038.tif  00039.tif  00040.tif  (+9962 more)
analytic/: Untitled-1.nb  prior.nb
cmake/: cstd.cmake  platform.cmake
cpuid/: build.ps1  build_init.ps1
doc/: CMakeLists.txt
doc/source/: commandline.rst  conf.py  index.rst  installation.rst  intro.rst  plugin.rst
fiji-plugin/: pom.xml
fiji-plugin/src/main/java/: B_recs.java  B_recs_psf.java  NativeUtils.java  psf_params_t.java
fiji-plugin/src/main/resources/: plugins.config
resources/: parameters.conf
src/: .Brecs.c.swo  .ycm_extra_conf.py  Brecs.c  Brecs.h  Brecs.i  Brecssimp.c  Brecssimp.h  Bstorm.c  Bstorm3d.c  CMakeLists.txt  Makefile.am  README.md  binary.c  brecs.main.c  cmdline.c  cmdline.ggo  cmdline.h  error.c  error.h  gendat.c  genpsf.c  genpsf.h  genpsf_main.c  inoutimg.c  inoutimg.h  javainter.c  javainterf.c  javainterf.h  javainterf.i  measure_psf.c  minproj.c  parameter.io.c  parameter.io.h  parameters.h  parser.c  parser.h  radcorrfunct.c  reorgpsf2.c  reshift.c  sevslproj.c  (+4 more)
src/cmake/: platform.cmake  show.cmake
src/old/: parameter.bindings.h
src/platform/: CMakeLists.txt
src/platform/linux/: CMakeLists.txt  afloat.h  brecs_memory.c  brecs_memory.h  cmdline.c  inoutimg.c  platform.h
src/platform/msvc/: CMakeLists.txt  NOTES.txt  TODO  afloat.h  brecs_memory.c  brecs_memory.h  cmdline.c  cmdline.h  img.c  inoutimg.c  memory.c  platform.h  rand.c  rand.h  wincodec.h  wincodec_i.c  wincodec_p.c
src/platform/osx/: CMakeLists.txt  afloat.h  brecs_memory.c  brecs_memory.h  inoutimg.c  platform.h
src/platform/unix/: CMakeLists.txt  inoutimg.c  platform.h
tools/: file-description.xml
